# RSWebTWAIN

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: build-msi.yml  ci.yml
docs/: code-signing-policy.md  configuration.md  privacy.md
scanner-sidecar/: Cargo.toml
scanner-sidecar/src/: logging.rs  main.rs  twain_ffi.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: generate_test_pdf.rs
src-tauri/frontend/: index.html
src-tauri/src/: config.rs  lib.rs  logging.rs  main.rs  pdf.rs  protocol.rs  ws_server.rs
src-tauri/src/scanner/: mod.rs  sidecar.rs  twain.rs  twain_ffi.rs
src-tauri/tests/: config_first_run.rs  sidecar_retry.rs  ws_integration.rs
